# datathon2k25

./: .2025-04-05-Note-10-07.autosave.xopp  .gitattributes  .gitignore  1  2025-04-05-Note-10-07.xopp  Dockerfile  Gieni.ipynb  Gieni.py  README.md  api.key  config.py  data  env.yml  feature_engineering.ipynb  geofeature.py  labelurls.txt  main.py  minhashing.ipynb  ner.ipynb  pyproject.toml  requirements.txt  splitter.py  url_filtering.ipynb
.ipynb_checkpoints/: feature_engineering-checkpoint.ipynb
data/: important_urls.parquet
frontend/: index.html  package-lock.json  package.json
frontend/src/: main.js
frontend/src/components/: Chat.vue
frontend/src/pages/: index.vue
frontend/src/plugins/: axios.js
gieni_db/: chroma.sqlite3
indexing/: indexing.py  splitter.py
notebooks/: feature_engineering.ipynb
rag/: .env  embedder.py  generator.py  indexer.py
rag/api/: endpoints.py
rag/chains/: graph_qa.py  kb.py  ontology_rag.py  retrieval.py  retriever.py
rag/prompts/: qa_answer.txt  query.txt
rag/schemas/: models.py  promptmanager.py
