[project]
name = "datathon2k25"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.0",
    "datasketch>=1.6.5",
    "gliner>=0.2.17",
    "gliner-spacy>=0.0.11",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.6",
    "langchain-community>=0.3.21",
    "notebook>=7.3.3",
    "openai>=1.70.0",
    "pip>=25.0.1",
    "setuptools>=78.1.0",
    "spacy[cuda12x]>=3.8.5",
    "torch>=2.6.0",
    "transformers>=4.50.3",
    "wheel>=0.45.1",
]
