[project]
name = "datathon2k25"
version = "0.1.0"
description = "Pufferfish solution for Orderfox's challenge"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.0",
    "fastparquet>=2024.11.0",
    "langchain-community>=0.3.21",
    "notebook>=7.3.3",
    "numpy>=2.2.4",
    "openai>=1.70.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.1",
    "scikit-learn>=1.6.1",
    "tldextract>=5.1.3",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]
